[package]
name = "lsport"
version = "0.1.0"
edition = "2021"
authors = [ "mglolenstine" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.1"

[lib]
name = "lsport"
path = "src/lib.rs"

[[bin]]
name = "lsport"
path = "src/main.rs"
